fix(submission): fix submission operation menu text wrapped

--- a/src/pages/submission/submission/SubmissionPage.module.less
+++ b/src/pages/submission/submission/SubmissionPage.module.less
@@ -4,6 +4,11 @@
 
 .operationsPopup {
   padding: 0 !important;
+
+  :global(.menu) {
+    min-width: fit-content;
+    white-space: nowrap;
+  }
 }
 
 .operations {
